Compilation errors in index classes were fixed.